--- a/apple_collection.html
+++ b/apple_collection.html
@@ -15,6 +15,9 @@
     <div id="title">
     <h1>Apple Collection</h1>
     </div>
+	<div id="main_link">
+	<p><a href="index.html">Back To Home</a></p>
+	</div>
 	<div id="text_container">
 	<p>
 		For the last three years I have been collecting older Apple devices as I have always found them to be beautifully made devices, but the price for new Apple hardware prevented me from obtaining those devices. Hence why the majority of my collection consists of currently unsupported or legacy devices as they are usually very cheap to pick up off of TradeMe. <br><br>I currently have 1x iPhone 3G, 3x  iPhone 3Gs, 1x iPhone 4, 5x iPhone 4s, 5x iPhone 5, 1x iPhone 5s, 1x iPhone 6, 1x iPhone 6s (Current device I use), 1x iPhone SE, 1x iPad Mini 1st Gen, 1x iPad Mini 2nd Gen, 1x iPad 6th Gen and 1x iPod Touch 4th Gen. Most of the older devices, up to the iPhone 5, only cost me an average of $10 per device so it's not a complete sinkhole of money. Often I purchase old broken devices, fix them up with new parts and sell them for a profit to make some money.<br><br>Most of my devices (bar the old completely unsupported legacy ones) have been used as my main device for some amount of time or have some other development use, so they don't just sit in a box unused after being purchased. It is a pretty good hobby to collect these devices, there is a relativly large community on twitter and reddit regarding this stuff and it's always nice to finally find a good deal on TradeMe after possible hours of searching.
