--- a/jailbreaking.html
+++ b/jailbreaking.html
@@ -15,6 +15,9 @@
     <div id="title">
     <h1>Jailbreaking</h1>
     </div>
+	<div id="main_link">
+	<p><a href="index.html">Back To Home</a></p>
+	</div>
 	<div id="text_container">
 	<p>
 		I've been into jailbreaking Apple devices since 2010, when I was 11, as even though iOS was the staple mobile OS to me, I always felt that there was room for improvement. That was back on iOS 4.3 when my 4th Gen iPod Touch was new and bootrom jailbreaks were the way to go. Now, almost 9 years and 8 major iOS versions later, I am running the jailbreak for iOS 12.0 - 12.1.2 on my iPhone 6s. Nowadays, stock iOS is pretty good compared to what it was 9 years ago, however I always find jailbreak tweaks that make it worth waiting on lower firmwares such as HomeGesture which ports the iPhone X and Xs gesture system to older devices. Now I find it extremely annoying to be without a jailbreak. Just having the freedom to customize my device as I please and fix any annoyances in iOS that apple hasn't fixed is great.<br><br>One of my iPhone 5's (pictured bottom left) is special as I purchased it on a specific firmware version (7.0.6), which is vulnerable to an iBoot exploit which allows downgrades/upgrades to any unsigned firmware versions, verbose boots (as pictured) and other interesting things. It also allows for the installation of Apple's internal testing OS, as pictured to the right of that image. This 3Gs is running the internal testing version (Switchboard OS) of iOS 5.1.1 but is installed using a bootrom exploit, not the iBoot exploit mentioned earlier. You can't do much with this testing OS but it is interesting to see how Apple tests hardware before it's sent out to the public.
