--- a/pc_stuff.html
+++ b/pc_stuff.html
@@ -15,6 +15,9 @@
     <div id="title">
     <h1>PC Stuff</h1>
     </div>
+	<div id="main_link">
+	<p><a href="index.html">Back To Home</a></p>
+	</div>
 	<div id="text_container">
 	<p>
 		I've been around computers since a very young age and have always loved tinkering and playing with them. I built my first PC in 2013 after saving money from working during the holidays and since then have gone through many different configurations. I mostly have stuck to AMD purely because I  don't and have never had the budget for an Intel based system but now with my 2400G from AMD I no longer feel as if I'm missing out on much going with AMD. My current build, 2400G, 1060 3GB, 16GB of (slow =(  ) DDR4 Ram, is plently enough for playing games, video editing and anything else I throw at it.<br><br>I also have a server which consists of parts from old builds and just stuff I've found at different points. It currently lives under my bed inside a completely stripped Mac G5 case and is plugged into my TV to use as a media player when needed but also has Teamviewer on it so I don't need to control everything with just a bluetooth mouse. It may look like a fire hazard waiting to happen but after being left on (by mistake) for a week straight with no issues or high temps, I feel like it's safe enough. I would eventually like to mount the parts in the G5 case properly and have it setup next to my main PC, but that plan is a while out.
