Icon for tab. might not work tho

--- a/hackintosh_stuff.html
+++ b/hackintosh_stuff.html
@@ -7,7 +7,8 @@
     <title>Hackintosh Stuff</title>
     <meta name="description" content="Matthew Pierson's Portfolio Website">
     <link rel="stylesheet" href="hackintosh.css" />
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
+	<link rel="icon" href="icon.png">
 
 </head>
 
