--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="Matthew Pierson's Portfolio Website">
     <link rel="stylesheet" href="homepage.css" />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet"> 
-
+	<link rel="icon" href="icon.png">
+	
 </head>
 
 <body>
