--- a/apple_collection.html
+++ b/apple_collection.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Matthew Pierson's Portfolio Website">
     <link rel="stylesheet" href="collection.css" />
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet"> 
+	<link rel="icon" href="icon.png">
 
 </head>
 
