--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="link1">
 		<p><a href="pc_stuff.html"><b>&nbsp;PC Stuff</b> - Stuff about my computers</a></p>
         <a href="pc_stuff.html">
-            <img src="img/Wireframe%20-%20Homepage.png" alt="Picture">
+            <img src="img/pc2.png" alt="Picture">
         </a>
     </div>
         
