--- a/jailbreaking.html
+++ b/jailbreaking.html
@@ -42,7 +42,7 @@
 	<div id="link1">
 		<p><a href="pc_stuff.html"><b>PC Stuff</b></a></p>
 	<a href="pc_stuff.html">
-    <img src="img/Wireframe%20-%20Homepage.png" alt="Picture">
+    <img src="img/pc2.png" alt="Picture">
 	</a>
 	</div>
 	<div id="link2">
