--- a/pc_stuff.html
+++ b/pc_stuff.html
@@ -25,10 +25,10 @@
  	</p> 
 	</div>
 	<div id="img1">
-		<img src="img/collection1.png">
+		<img src="img/pc1.png">
 	</div>
 	<div id="img2">
-	<img src="img/collection2.png">
+	<img src="img/pc3.png">
 	</div>
 	<div id="img3">
 	<img src="img/collection3.png">
