link to actual homesite not index file

--- a/apple_collection.html
+++ b/apple_collection.html
@@ -17,7 +17,7 @@
     <h1>Apple Collection</h1>
     </div>
 	<div id="main_link">
-	<p><a href="index.html">Back To Home</a></p>
+	<p><a href="https://matthewpierson.github.io/">Back To Home</a></p>
 	</div>
 	<div id="text_container">
 	<p>
