Added last images

--- a/pc_stuff.html
+++ b/pc_stuff.html
@@ -31,10 +31,10 @@
 	<img src="img/pc3.png">
 	</div>
 	<div id="img3">
-	<img src="img/collection3.png">
+	<img src="img/pc4.png">
 	</div>
 	<div id="img4">
-	<img src="img/collection4.png">
+	<img src="img/pc5.png">
 	</div>
 	<h1 id="bottom_text">
 	Links Below	
