--- a/index.html
+++ b/index.html
@@ -1,7 +1,33 @@
 <html>
 	<body>
+		<head>
+		<style>
+			h1 {text-align:center;}
+			p {text-align:center;}
+			h2 {text-align:center;}
+			img {width: 25%;}
+		</style>
+	</head>
+		<h1>
+		My stuff
+		</h1>
+		<h2>
+		Beautiful website ay? I'll make it nice someday.
+		</h2>
 		<p>
-		hehe
+		<p><a href= "https://github.com/MatthewPierson/1033-OTA-Downgrader">10.3.3-OTA-Downgrader</p></a>
+		<p><a href= "https://github.com/MatthewPierson/iPhone-5s-OTA-Downgrade-Patches">10.3.3 OTA downgrade patches</p></a>
+		<p><a href= "https://github.com/MatthewPierson/ipwndfu_public">My ipwndfu_public fork with full s5l8965x and t8010 (from Cryptic) support</p></a>
+		
+		<p>
+		Currently working on:
 		</p>
+		<p><a href = "https://github.com/MatthewPierson/checkm8-nonce-setter">checkm8 nonce setter. Currently private, in testing stage.</a></p>
+		<p>Got more cool stuff coming I've yet to announce =)</p>
+		<p><a href = "https://twitter.com/mosk_i">My twitter</a></p>
+		<p><a href = "https://www.reddit.com/user/_Matty/">My reddit account</a></p>
+		<p><a href = "https://github.com/MatthewPierson">My github</a></p>
+		<p><img src = "cutie.jpg"></p>
+		<p><img src = "nice.png"></p>
 	</body>
 </html>
