--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<p><a href = "https://twitter.com/mosk_i">My twitter</a></p>
 		<p><a href = "https://www.reddit.com/user/_Matty/">My reddit account</a></p>
 		<p><a href = "https://github.com/MatthewPierson">My github</a></p>
-		<p><img src = "cutie.jpg"></p>
+		<p><img src = "cutie.png"></p>
 		<p><img src = "nice.png"></p>
 	</body>
 </html>
