--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<p><a href= "https://github.com/MatthewPierson/1033-OTA-Downgrader">10.3.3-OTA-Downgrader</p></a>
 		<p><a href= "https://github.com/MatthewPierson/iPhone-5s-OTA-Downgrade-Patches">10.3.3 OTA downgrade patches</p></a>
 		<p><a href= "https://github.com/MatthewPierson/ipwndfu_public">My ipwndfu_public fork with full s5l8965x and t8010 (from Cryptic) support</p></a>
-		<p><a href = "https://github.com/MatthewPierson/checkm8-nonce-setter">checkm8 nonce setter. Currently private, in testing stage.</a></p>
+		<p><a href = "https://github.com/MatthewPierson/checkm8-nonce-setter">checkm8 nonce setter.</a></p>
         <p>
         Currently working on:
         </p>
