--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <p class="button" id="button-github">My GitHub</p>
     </div>
 	<div>
+      <p class="button" id="button-nonce-app">My macOS Checkm8 Nonce-Setter GUI App</p>
+    </div>
+	<div>
       <p class="button" id="button-downgrader-patches">10.3.3 Downgrade Patches</p>
       <p class="button" id="button-nonce-setter">Checkm8 based Nonce-Setter</p>
     </div>   
@@ -54,4 +57,5 @@
   document.getElementById('button-ipwndfu').onclick = () => window.location = "https://github.com/MatthewPierson/ipwndfu_public";
   document.getElementById('button-hackintosh').onclick = () => window.location = "https://github.com/MatthewPierson/Hackintosh_Files";  
   document.getElementById('button-twitter').onclick = () => window.location = "https://twitter.com/mosk_i";
+  document.getElementById('button-nonce-app').onclick = () => window.location = "https://github.com/MatthewPierson/CheckNonceGUI";
 </script>
