Started iOS downgrades section
Added basic info about 64 Bit iPhone downgrades, will expand more later

--- a/index.html
+++ b/index.html
@@ -23,39 +23,24 @@
     </div>
 	<div>
 	<p>&nbsp; </p>
-	</div>
-    <div>
-      <p class="button" id="button-downgrader">A7 10.3.3 OTA Downgrader</p>
-      <p class="button" id="button-github">My GitHub</p>
-    </div>
+  </div>
+  <br>
+  <br>
+  <div>
+    <p class="button" id="button-vieux">Vieux - OTA Downgrade Tool</p>
+    <p class="button" id="button-downguide">iOS Downgrade Guide/Charts</p>
+  </div>
 	<div>
-      <p class="button" id="button-nonce-app">My macOS Checkm8 Nonce-Setter GUI App</p>
-    </div>
-	<div>
-      <p class="button" id="button-downgrader-patches">10.3.3 Downgrade Patches</p>
-      <p class="button" id="button-nonce-setter">Checkm8 based Nonce-Setter</p>
-    </div>   
-	<div>
-      <p class="button" id="button-ipwndfu">ipwndfu_public fork with iPad Air (s5l8965x) and t8010 (from Cryptic) support</p>
-    </div>
-		<div>
-      <p class="button" id="button-hackintosh">My EFI folders for my hackintosh laptops, both OpenCore and Clover</p>
-    </div>
-	<div>
-      <p class="button" id="button-twitter">My twitter</p>
-    </div>
-	<img src="img/nice.png" alt="shocked-penguin" class="penguin" width="350vw">
+    <p class="button" id="button-github">My Github</p>
+    <p class="button" id="button-twitter">My twitter</p>
+  </div>
   </body>
 </html>
 
 
 <script>
-  document.getElementById('button-github').onclick = () => window.location = "https://github.com/MatthewPierson";
-  document.getElementById('button-downgrader').onclick = () => window.location = "https://github.com/MatthewPierson/1033-OTA-Downgrader";
-  document.getElementById('button-downgrader-patches').onclick = () => window.location = "https://github.com/MatthewPierson/iPhone-5s-OTA-Downgrade-Patches";
-  document.getElementById('button-nonce-setter').onclick = () => window.location = "https://github.com/MatthewPierson/checkm8-nonce-setter";
-  document.getElementById('button-ipwndfu').onclick = () => window.location = "https://github.com/MatthewPierson/ipwndfu_public";
-  document.getElementById('button-hackintosh').onclick = () => window.location = "https://github.com/MatthewPierson/Hackintosh_Files";  
+  document.getElementById('button-downguide').onclick = () => window.location = "https://MatthewPierson.github.io/ios_downgrades.html";
+  document.getElementById('button-vieux').onclick = () => window.location = "https://github.com/MatthewPierson/Vieux";
+  document.getElementById('button-github').onclick = () => window.location = "https://github.com/MatthewPierson";  
   document.getElementById('button-twitter').onclick = () => window.location = "https://twitter.com/mosk_i";
-  document.getElementById('button-nonce-app').onclick = () => window.location = "https://github.com/MatthewPierson/CheckNonceGUI";
 </script>
