Added page for SEP information (needs more added)

--- a/devices/xr.html
+++ b/devices/xr.html
@@ -59,14 +59,16 @@
         <br>
         <br>
         <div>
-          <p class="button" id="button-futurerestore">Futurerestore Guide</p>
-          <br>
-          <p class="button" id="button-home">Back Home</p>
-        </div>
-      </body>
-</html>
-
-<script>
-  document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/ios_downgrades.html";
-  document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
-</script>
+            <p class="button" id="button-sep">SEP Information</p>
+            <p class="button" id="button-futurerestore">Futurerestore Guide</p>
+            <br>
+            <p class="button" id="button-home">Back Home</p>
+          </div>
+        </body>
+    </html>
+    
+    <script>
+    document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/ios_downgrades.html";
+    document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
+    document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
+    </script>
