--- a/guides/futurerestore.html
+++ b/guides/futurerestore.html
@@ -27,5 +27,18 @@
       <li>Wait for the restore to finish</li>
       </ol>
       <h2>Done!</h2>
+      <div>
+        <br>
+        <p class="button" id="button-sep">SEP Information</p>
+      </div>
+      <div>
+        <br>
+        <p class="button" id="button-home">Back Home</p>
+      </div>
   </body>
 </html>
+
+<script>
+    document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/ios_downgrades.html";
+    document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
+  </script>
