--- a/guides/vieux.html
+++ b/guides/vieux.html
@@ -27,5 +27,13 @@
       <li>Follow the programs instructions when needed</li>
       </ol>
       <h2>Done!</h2>
+      <div>
+        <br>
+        <p class="button" id="button-home">Back Home</p>
+      </div>
   </body>
 </html>
+
+<script>
+    document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/ios_downgrades.html";
+  </script>
