--- a/ios_downgrades.html
+++ b/ios_downgrades.html
@@ -42,6 +42,13 @@
       <p class="button" id="button-11">iPhone 11</p>
       <p class="button" id="button-11p">iPhone 11 Pro/11 Pro Max</p>
     </div>
+    <br>
+    <div>
+      <p class="button" id="button-sep">SEP Information</p>
+      <p class="button" id="button-vieux">Vieux Guide</p>
+      <p class="button" id="button-futurerestore">Futurerestore Guide</p>
+    </div>
+    <br>
     <div>
       <p class="button" id="button-home">Back Home</p>
     </div>
@@ -62,4 +69,7 @@
   document.getElementById('button-11').onclick = () => window.location = "https://MatthewPierson.github.io/devices/11.html";
   document.getElementById('button-11p').onclick = () => window.location = "https://MatthewPierson.github.io/devices/11p.html";
   document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/index.html";
+  document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
+  document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
+  document.getElementById('button-vieux').onclick = () => window.location = "https://MatthewPierson.github.io/guides/vieux.html";
 </script>
