--- a/devices/5s.html
+++ b/devices/5s.html
@@ -82,6 +82,7 @@
         <br>
         <br>
         <div>
+          <p class="button" id="button-sep">SEP Information</p>
           <p class="button" id="button-vieux">Vieux Guide</p>
           <p class="button" id="button-futurerestore">Futurerestore Guide</p>
           <br>
@@ -92,6 +93,7 @@
 
 <script>
   document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/ios_downgrades.html";
-  document.getElementById('button-vieux').onclick = () => window.location = "https://MatthewPierson.github.io/guides/vieux.html";
+  document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
   document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
+  document.getElementById('button-vieux').onclick = () => window.location = "https://MatthewPierson.github.io/guides/vieux.html";
 </script>
