--- a/devices/6.html
+++ b/devices/6.html
@@ -75,6 +75,7 @@
       <br>
       <br>
       <div>
+        <p class="button" id="button-sep">SEP Information</p>
         <p class="button" id="button-futurerestore">Futurerestore Guide</p>
         <br>
         <p class="button" id="button-home">Back Home</p>
@@ -84,5 +85,6 @@
 
 <script>
 document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/ios_downgrades.html";
+document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
 document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
 </script>
