--- a/ios_downgrades.html
+++ b/ios_downgrades.html
@@ -1,6 +1,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="img/cutie.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="iOS Downgrade Chart">
