--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</div>
     <div class="subTitle-container">
       <div class="subTitle">All my iOS/Hackintosh related projects and files.</div>
-	  <div class="subTitle">Site's HTML and CSS is modified from <a href = https://getzbra.com> Zebra's site.</a></div>
+	  <div class="subTitle">Site's HTML and CSS is modified from <a href = https://getzbra.com> Zebra's (old) site.</a></div>
 	  <div class="subTitle">(Use Zebra instead of Cydia or Sileo btw)</div>
     </div>
 	<div>
