Added iPods and most iPads
Also moved files around to be better organized

--- a/devices/iphone/6.html
+++ b/devices/iphone/6.html
@@ -1,17 +1,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="../img/cutie.png">
+    <link rel="icon" href="../../img/cutie.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="iOS Downgrade Chart">
     <title>iOS Downgrade Chart - 6/6+</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../../css/main.css">
    </head>
     <body>
       <div class="logo-container">
-        <img src="../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
+        <img src="../../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
         <h1 class="bigTitle">iOS Downgrade Chart</h1>
       </div>
       <div class="subTitle">iPhone 6/6+</div>
