--- a/ios_downgrades.html
+++ b/ios_downgrades.html
@@ -19,36 +19,20 @@
 	</div>
     <div class="subTitle-container">
       <div class="subTitle">iOS Downgrade Chart</div>
-      <div class="subTitle">Information on which devices can downgrade to what version and the methods to do said downgrade</div>
+      <div class="subTitle">Select what product you want to downgrade:</div>
 	<div>
 	<p>&nbsp; </p>
 	</div>
     <div>
-      <p class="button" id="button-5s">iPhone 5s</p>
-      <p class="button" id="button-6">iPhone 6/6+</p>
+      <p class="button" id="button-iphone">iPhones</p>
     </div>
     <div>
-      <p class="button" id="button-6s">iPhone 6s/6s+</p>
-      <p class="button" id="button-7">iPhone 7/7+</p>
+      <p class="button" id="button-ipad">iPads</p>
     </div>
     <div>
-      <p class="button" id="button-8">iPhone 8/8+</p>
-      <p class="button" id="button-x">iPhone X</p>
-    </div>
-    <div>
-      <p class="button" id="button-xs">iPhone Xs/Xs Max</p>
-      <p class="button" id="button-xr">iPhone Xr</p>
-    </div>
-    <div>
-      <p class="button" id="button-11">iPhone 11</p>
-      <p class="button" id="button-11p">iPhone 11 Pro/11 Pro Max</p>
+      <p class="button" id="button-ipod">iPods</p>
     </div>
     <br>
-    <div>
-      <p class="button" id="button-sep">SEP Information</p>
-      <p class="button" id="button-vieux">Vieux Guide</p>
-      <p class="button" id="button-futurerestore">Futurerestore Guide</p>
-    </div>
     <br>
     <div>
       <p class="button" id="button-home">Back Home</p>
@@ -59,18 +43,8 @@
 
 
 <script>
-  document.getElementById('button-5s').onclick = () => window.location = "https://MatthewPierson.github.io/devices/5s.html";
-  document.getElementById('button-6').onclick = () => window.location = "https://MatthewPierson.github.io/devices/6.html";
-  document.getElementById('button-6s').onclick = () => window.location = "https://MatthewPierson.github.io/devices/6s.html";
-  document.getElementById('button-7').onclick = () => window.location = "https://MatthewPierson.github.io/devices/7.html";
-  document.getElementById('button-8').onclick = () => window.location = "https://MatthewPierson.github.io/devices/8.html";
-  document.getElementById('button-x').onclick = () => window.location = "https://MatthewPierson.github.io/devices/x.html";
-  document.getElementById('button-xs').onclick = () => window.location = "https://MatthewPierson.github.io/devices/xs.html";
-  document.getElementById('button-xr').onclick = () => window.location = "https://MatthewPierson.github.io/devices/xr.html";
-  document.getElementById('button-11').onclick = () => window.location = "https://MatthewPierson.github.io/devices/11.html";
-  document.getElementById('button-11p').onclick = () => window.location = "https://MatthewPierson.github.io/devices/11p.html";
   document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/index.html";
-  document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
-  document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
-  document.getElementById('button-vieux').onclick = () => window.location = "https://MatthewPierson.github.io/guides/vieux.html";
+  document.getElementById('button-iphone').onclick = () => window.location = "https://MatthewPierson.github.io/iphones.html";
+  document.getElementById('button-ipad').onclick = () => window.location = "https://MatthewPierson.github.io/ipads.html";
+  document.getElementById('button-ipod').onclick = () => window.location = "https://MatthewPierson.github.io/ipods.html";
 </script>
