--- a/devices/ipad/5.html
+++ b/devices/ipad/5.html
@@ -1,21 +1,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="../img/cutie.png">
+    <link rel="icon" href="../../img/cutie.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="iOS Downgrade Chart">
-    <title>iOS Downgrade Chart - X</title>
+    <title>iOS Downgrade Chart - 5th Gen</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../../css/main.css">
    </head>
     <body>
       <div class="logo-container">
-        <img src="../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
+        <img src="../../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
         <h1 class="bigTitle">iOS Downgrade Chart</h1>
       </div>
-      <div class="subTitle">iPhone X</div>
-      <div class="subTitle">(iPhone10,3 and iPhone10,6)</div>
+      <div class="subTitle">iPad 5th Gen</div>
+      <div class="subTitle">(iPad6,11 and iPad6,12)</div>
       
       <h1 id="ios-downgrade-chart">iOS Downgrade Chart</h1>
       <br>
@@ -23,6 +23,7 @@
         <thead>
         <tr>
         <th style="text-align:center"></th>
+        <th style="text-align:center">&nbsp;10.x&nbsp;</th>
         <th style="text-align:center">&nbsp;11.x&nbsp;</th>
         <th style="text-align:center">&nbsp;12.x&nbsp;</th>
         <th style="text-align:center">&nbsp;13.x&nbsp;</th>
@@ -34,9 +35,11 @@
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
+        <td style="text-align:center">X</td>
         </tr>
         <tr>
         <td style="text-align:center">-------------------------------------</td>
+        <td style="text-align:center">-----</td>
         <td style="text-align:center">-----</td>
         <td style="text-align:center">-----</td>
         <td style="text-align:center">------------------</td>
@@ -45,10 +48,12 @@
         <td style="text-align:center">Untethered (With Blobs)<br>Method/Tool</td>
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
-        <td style="text-align:center">Yes*<br><a href = https://MatthewPierson.github.io/guides/futurerestore.html target="_blank">Futurerestore</a></td>
+        <td style="text-align:center">X</td>
+        <td style="text-align:center">Yes<br><a href = https://MatthewPierson.github.io/guides/futurerestore.html target="_blank">Futurerestore</a></td>
         </tr>
         <tr>
         <td style="text-align:center">-------------------------------------</td>
+        <td style="text-align:center">-----</td>
         <td style="text-align:center">-----</td>
         <td style="text-align:center">-----</td>
         <td style="text-align:center">------------------</td>
@@ -58,11 +63,11 @@
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
+        <td style="text-align:center">X</td>
         </tr>
         </tbody>
         </table>
         <br>
-        <h2>* FACE-ID WILL NOT WORK AFTER DOWNGRADING USING 13.3's SEP.<br>You must be jailbroken in order to set your generator for futurerestoring</h2>
         <br>
         <br>
         <div>
