--- a/devices/ipad/air3.html
+++ b/devices/ipad/air3.html
@@ -1,21 +1,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="../img/cutie.png">
+    <link rel="icon" href="../../img/cutie.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="iOS Downgrade Chart">
-    <title>iOS Downgrade Chart - Xr</title>
+    <title>iOS Downgrade Chart - Air 3</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../../css/main.css">
    </head>
     <body>
       <div class="logo-container">
-        <img src="../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
+        <img src="../../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
         <h1 class="bigTitle">iOS Downgrade Chart</h1>
       </div>
-      <div class="subTitle">iPhone Xr</div>
-      <div class="subTitle">(iPhone11,8)</div>
+      <div class="subTitle">iPad Air 3</div>
+      <div class="subTitle">(iPad11,3 and iPad11,4)</div>
       
       <h1 id="ios-downgrade-chart">iOS Downgrade Chart</h1>
       <br>
@@ -41,7 +41,7 @@
         <tr>
         <td style="text-align:center">Untethered (With Blobs)<br>Method/Tool</td>
         <td style="text-align:center">X</td>
-        <td style="text-align:center">Yes*<br><a href = https://MatthewPierson.github.io/guides/futurerestore.html target="_blank">Futurerestore</a></td>
+        <td style="text-align:center">Yes<br><a href = https://MatthewPierson.github.io/guides/futurerestore.html target="_blank">Futurerestore</a></td>
         </tr>
         <tr>
         <td style="text-align:center">-------------------------------------</td>
@@ -56,7 +56,6 @@
         </tbody>
         </table>
         <br>
-        <h2>* FACE-ID WILL NOT WORK AFTER DOWNGRADING USING 13.3's SEP.<br>You must be jailbroken in order to set your generator for futurerestoring</h2>
         <br>
         <br>
         <div>
