--- a/devices/ipad/mini3.html
+++ b/devices/ipad/mini3.html
@@ -1,21 +1,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="../img/cutie.png">
+    <link rel="icon" href="../../img/cutie.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="iOS Downgrade Chart">
-    <title>iOS Downgrade Chart - 5s</title>
+    <title>iOS Downgrade Chart - Mini 3</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../../css/main.css">
    </head>
     <body>
       <div class="logo-container">
-        <img src="../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
+        <img src="../../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
         <h1 class="bigTitle">iOS Downgrade Chart</h1>
       </div>
-      <div class="subTitle">iPhone 5s</div>
-      <div class="subTitle">(iPhone6,1 and iPhone6,2)</div>
+      <div class="subTitle">iPad Mini 3</div>
+      <div class="subTitle">(iPad4,7, iPad4,8 and iPad4,9)</div>
       
       <h1 id="ios-downgrade-chart">iOS Downgrade Chart</h1>
       <br>
@@ -23,7 +23,6 @@
         <thead>
         <tr>
         <th style="text-align:center"></th>
-        <th style="text-align:center">&nbsp;7.x&nbsp;</th>
         <th style="text-align:center">&nbsp;8.x&nbsp;</th>
         <th style="text-align:center">&nbsp;9.x&nbsp;</th>
         <th style="text-align:center">&nbsp;10.x&nbsp;</th>
@@ -39,11 +38,9 @@
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
-        <td style="text-align:center">X</td>
         </tr>
         <tr>
         <td style="text-align:center">-------------------------------------</td>
-        <td style="text-align:center">-----</td>
         <td style="text-align:center">-----</td>
         <td style="text-align:center">-----</td>
         <td style="text-align:center">--------------------------------</td>
@@ -54,14 +51,12 @@
         <td style="text-align:center">Untethered (With Blobs)<br>Method/Tool</td>
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
-        <td style="text-align:center">X</td>
         <td style="text-align:center">Yes 10.3 and up<br><a href = https://MatthewPierson.github.io/guides/futurerestore.html target="_blank">Futurerestore</a></td>
         <td style="text-align:center">Yes 11.3 and up<br><a href = https://MatthewPierson.github.io/guides/futurerestore.html target="_blank">Futurerestore</a></td>
         <td style="text-align:center">Yes<br><a href = https://MatthewPierson.github.io/guides/futurerestore.html target="_blank">Futurerestore</a></td>
         </tr>
         <tr>
         <td style="text-align:center">-------------------------------------</td>
-        <td style="text-align:center">-----</td>
         <td style="text-align:center">-----</td>
         <td style="text-align:center">-----</td>
         <td style="text-align:center">--------------------------------</td>
@@ -73,7 +68,6 @@
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
-        <td style="text-align:center">Yes 10.3.3 Only<br><a href = https://MatthewPierson.github.io/guides/vieux.html target="_blank">Vieux</a></td>
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
         </tr>
@@ -84,7 +78,6 @@
         <br>
         <div>
           <p class="button" id="button-sep">SEP Information</p>
-          <p class="button" id="button-vieux">Vieux Guide</p>
           <p class="button" id="button-futurerestore">Futurerestore Guide</p>
           <br>
           <p class="button" id="button-home">Back Home</p>
@@ -96,5 +89,4 @@
   document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/ios_downgrades.html";
   document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
   document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
-  document.getElementById('button-vieux').onclick = () => window.location = "https://MatthewPierson.github.io/guides/vieux.html";
 </script>
