--- a/devices/ipad/mini5.html
+++ b/devices/ipad/mini5.html
@@ -1,21 +1,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="../img/cutie.png">
+    <link rel="icon" href="../../img/cutie.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="iOS Downgrade Chart">
-    <title>iOS Downgrade Chart - 6s/6s+</title>
+    <title>iOS Downgrade Chart - Mini 5</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../../css/main.css">
    </head>
     <body>
       <div class="logo-container">
-        <img src="../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
+        <img src="../../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
         <h1 class="bigTitle">iOS Downgrade Chart</h1>
       </div>
-      <div class="subTitle">iPhone 6s/6s+</div>
-      <div class="subTitle">(iPhone8,1 and iPhone8,2)</div>
+      <div class="subTitle">iPad Mini 5</div>
+      <div class="subTitle">(iPad11,1 and iPad11,2)</div>
       
       <h1 id="ios-downgrade-chart">iOS Downgrade Chart</h1>
       <br>
@@ -23,9 +23,6 @@
         <thead>
         <tr>
         <th style="text-align:center"></th>
-        <th style="text-align:center">&nbsp;9.x&nbsp;</th>
-        <th style="text-align:center">&nbsp;10.x&nbsp;</th>
-        <th style="text-align:center">&nbsp;11.x&nbsp;</th>
         <th style="text-align:center">&nbsp;12.x&nbsp;</th>
         <th style="text-align:center">&nbsp;13.x&nbsp;</th>
         </tr>
@@ -35,39 +32,24 @@
         <td style="text-align:center">Tethered<br>Method/Tool</td>
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
-        <td style="text-align:center">X</td>
-        <td style="text-align:center">X</td>
-        <td style="text-align:center">X</td>
         </tr>
         <tr>
         <td style="text-align:center">-------------------------------------</td>
-        <td style="text-align:center">-----</td>
-        <td style="text-align:center">-----</td>
-        <td style="text-align:center">-----</td>
         <td style="text-align:center">-----</td>
         <td style="text-align:center">------------------</td>
         </tr>
         <tr>
         <td style="text-align:center">Untethered (With Blobs)<br>Method/Tool</td>
         <td style="text-align:center">X</td>
-        <td style="text-align:center">X</td>
-        <td style="text-align:center">X</td>
-        <td style="text-align:center">X</td>
         <td style="text-align:center">Yes<br><a href = https://MatthewPierson.github.io/guides/futurerestore.html target="_blank">Futurerestore</a></td>
         </tr>
         <tr>
         <td style="text-align:center">-------------------------------------</td>
         <td style="text-align:center">-----</td>
-        <td style="text-align:center">-----</td>
-        <td style="text-align:center">-----</td>
-        <td style="text-align:center">-----</td>
         <td style="text-align:center">------------------</td>
         </tr>
         <tr>
         <td style="text-align:center">Untethered (W/O Blobs)<br>Method/Tool</td>
-        <td style="text-align:center">X</td>
-        <td style="text-align:center">X</td>
-        <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
         <td style="text-align:center">X</td>
         </tr>
