--- a/devices/iphone/11.html
+++ b/devices/iphone/11.html
@@ -1,21 +1,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="../img/cutie.png">
+    <link rel="icon" href="../../img/cutie.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="iOS Downgrade Chart">
-    <title>iOS Downgrade Chart - 11 Pro/11 Pro Max</title>
+    <title>iOS Downgrade Chart - 11</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../../css/main.css">
    </head>
     <body>
       <div class="logo-container">
-        <img src="../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
+        <img src="../../img/cutie.png" alt="beeg-yoshi" class="beegyoshi" width="90vw">
         <h1 class="bigTitle">iOS Downgrade Chart</h1>
       </div>
-      <div class="subTitle">iPhone 11 Pro/11 Pro Max</div>
-      <div class="subTitle">(iPhone12,3 and iPhone12,5)</div>
+      <div class="subTitle">iPhone 11</div>
+      <div class="subTitle">(iPhone12,1)</div>
       
       <h1 id="ios-downgrade-chart">iOS Downgrade Chart</h1>
       <h2 id="ios-downgrade-chart">Note that downgrades are not currently possible on A13 devices due to there being no public jailbreak for these devices</h2>
