Fixed ipad links and buttons

--- a/ipads.html
+++ b/ipads.html
@@ -24,24 +24,24 @@
 	<p>&nbsp; </p>
 	</div>
     <div>
-      <p class="button" id="button-5s">iPhone 5s</p>
-      <p class="button" id="button-6">iPhone 6/6+</p>
+      <p class="button" id="button-5">iPad 5th Gen</p>
+      <p class="button" id="button-6">iPad 6th Gen</p>
     </div>
     <div>
-      <p class="button" id="button-6s">iPhone 6s/6s+</p>
-      <p class="button" id="button-7">iPhone 7/7+</p>
+      <p class="button" id="button-7">iPad 7th Gen</p>
+      <p class="button" id="button-mini2">iPad Mini 2</p>
     </div>
     <div>
-      <p class="button" id="button-8">iPhone 8/8+</p>
-      <p class="button" id="button-x">iPhone X</p>
+      <p class="button" id="button-mini3">iPad Mini 3</p>
+      <p class="button" id="button-mini4">iPad Mini 4</p>
     </div>
     <div>
-      <p class="button" id="button-xs">iPhone Xs/Xs Max</p>
-      <p class="button" id="button-xr">iPhone Xr</p>
+      <p class="button" id="button-mini5">iPad Mini 5</p>
+      <p class="button" id="button-air">iPad Air</p>
     </div>
     <div>
-      <p class="button" id="button-11">iPhone 11</p>
-      <p class="button" id="button-11p">iPhone 11 Pro/11 Pro Max</p>
+      <p class="button" id="button-air2">iPad Air 2</p>
+      <p class="button" id="button-air3">iPad Air 3</p>
     </div>
     <br>
     <div>
@@ -59,16 +59,16 @@
 
 
 <script>
-  document.getElementById('button-5s').onclick = () => window.location = "https://MatthewPierson.github.io/devices/5s.html";
-  document.getElementById('button-6').onclick = () => window.location = "https://MatthewPierson.github.io/devices/6.html";
-  document.getElementById('button-6s').onclick = () => window.location = "https://MatthewPierson.github.io/devices/6s.html";
-  document.getElementById('button-7').onclick = () => window.location = "https://MatthewPierson.github.io/devices/7.html";
-  document.getElementById('button-8').onclick = () => window.location = "https://MatthewPierson.github.io/devices/8.html";
-  document.getElementById('button-x').onclick = () => window.location = "https://MatthewPierson.github.io/devices/x.html";
-  document.getElementById('button-xs').onclick = () => window.location = "https://MatthewPierson.github.io/devices/xs.html";
-  document.getElementById('button-xr').onclick = () => window.location = "https://MatthewPierson.github.io/devices/xr.html";
-  document.getElementById('button-11').onclick = () => window.location = "https://MatthewPierson.github.io/devices/11.html";
-  document.getElementById('button-11p').onclick = () => window.location = "https://MatthewPierson.github.io/devices/11p.html";
+  document.getElementById('button-5').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/5.html";
+  document.getElementById('button-6').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/6.html";
+  document.getElementById('button-7').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/7.html";
+  document.getElementById('button-mini2').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/mini2.html";
+  document.getElementById('button-mini3').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/mini3.html";
+  document.getElementById('button-mini4').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/mini4.html";
+  document.getElementById('button-mini5').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/mini5.html";
+  document.getElementById('button-air').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/air.html";
+  document.getElementById('button-air2').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/air2.html";
+  document.getElementById('button-air3').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/air3.html";
   document.getElementById('button-home').onclick = () => window.location = "https://matthewpierson.github.io/ios_downgrades.html";
   document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
   document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
