Added buttons to ipods page

--- a/ipods.html
+++ b/ipods.html
@@ -31,6 +31,11 @@
     </div>
     <br>
     <div>
+      <p class="button" id="button-sep">SEP Information</p>
+      <p class="button" id="button-futurerestore">Futurerestore Guide</p>
+    </div>
+    <br>
+    <div>
       <p class="button" id="button-home">Back</p>
     </div>
 	
@@ -44,5 +49,4 @@
   document.getElementById('button-home').onclick = () => window.location = "https://matthewpierson.github.io/ios_downgrades.html";
   document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
   document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
-  document.getElementById('button-vieux').onclick = () => window.location = "https://MatthewPierson.github.io/guides/vieux.html";
 </script>
