better ipad sorting

--- a/ipadmini.html
+++ b/ipadmini.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="iOS Downgrade Chart">
-    <title>iOS Downgrade Chart - iPads</title>
+    <title>iOS Downgrade Chart - iPad Minis</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
@@ -18,15 +18,18 @@
 	<p>&nbsp; </p>
 	</div>
     <div class="subTitle-container">
-      <div class="subTitle">iPads</div>
+      <div class="subTitle">iPad Minis</div>
       <div class="subTitle">Information on which iPads can downgrade to what version and the methods to do said downgrade</div>
 	<div>
 	<p>&nbsp; </p>
 	</div>
     <div>
-      <p class="button" id="button-5">iPad 5th Gen</p>
-      <p class="button" id="button-6">iPad 6th Gen</p>
-      <p class="button" id="button-7">iPad 7th Gen</p>
+      <p class="button" id="button-mini2">iPad Mini 2</p>
+      <p class="button" id="button-mini3">iPad Mini 3</p>
+    </div>
+    <div>
+      <p class="button" id="button-mini4">iPad Mini 4</p>
+      <p class="button" id="button-mini5">iPad Mini 5</p>
     </div>
     <br>
     <div>
@@ -44,16 +47,10 @@
 
 
 <script>
-  document.getElementById('button-5').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/5.html";
-  document.getElementById('button-6').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/6.html";
-  document.getElementById('button-7').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/7.html";
   document.getElementById('button-mini2').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/mini2.html";
   document.getElementById('button-mini3').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/mini3.html";
   document.getElementById('button-mini4').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/mini4.html";
   document.getElementById('button-mini5').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/mini5.html";
-  document.getElementById('button-air').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/air.html";
-  document.getElementById('button-air2').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/air2.html";
-  document.getElementById('button-air3').onclick = () => window.location = "https://MatthewPierson.github.io/devices/ipad/air3.html";
   document.getElementById('button-home').onclick = () => window.location = "https://matthewpierson.github.io/ios_downgrades.html";
   document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
   document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
