--- a/ios_downgrades.html
+++ b/ios_downgrades.html
@@ -45,6 +45,6 @@
 <script>
   document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/index.html";
   document.getElementById('button-iphone').onclick = () => window.location = "https://MatthewPierson.github.io/iphones.html";
-  document.getElementById('button-ipad').onclick = () => window.location = "https://MatthewPierson.github.io/ipaddetailed.html.html";
+  document.getElementById('button-ipad').onclick = () => window.location = "https://MatthewPierson.github.io/ipaddetailed.html";
   document.getElementById('button-ipod').onclick = () => window.location = "https://MatthewPierson.github.io/ipods.html";
 </script>
