Added dark mode + dark/light mode toggle

--- a/devices/ipad/mini2.html
+++ b/devices/ipad/mini2.html
@@ -90,6 +90,14 @@
           <br>
           <p class="button" id="button-home">Back Home</p>
         </div>
+        <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div>
+      <p class="button" id="button-background">Toggle Dark Mode</p>
+    </div>
       </body>
 </html>
 
@@ -98,4 +106,9 @@
   document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
   document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
   document.getElementById('button-vieux').onclick = () => window.location = "https://MatthewPierson.github.io/guides/vieux.html";
+  document.getElementById('button-background').onclick= () => toggleDarkMode();
+  function toggleDarkMode() {
+      var element = document.body;
+      element.classList.toggle("dark-mode");
+    } 
 </script>
