--- a/devices/ipad/mini3.html
+++ b/devices/ipad/mini3.html
@@ -89,4 +89,9 @@
   document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/ios_downgrades.html";
   document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
   document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
+  document.getElementById('button-background').onclick= () => toggleDarkMode();
+  function toggleDarkMode() {
+      var element = document.body;
+      element.classList.toggle("dark-mode");
+    } 
 </script>
