--- a/guides/vieux.html
+++ b/guides/vieux.html
@@ -32,9 +32,24 @@
         <br>
         <p class="button" id="button-home">Back Home</p>
       </div>
+      <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div>
+      <p class="button" id="button-background">Toggle Dark Mode</p>
+    </div>
   </body>
 </html>
 
 <script>
     document.getElementById('button-home').onclick = () => window.location = "https://MatthewPierson.github.io/ios_downgrades.html";
+    document.getElementById('button-background').onclick= () => toggleDarkMode();
+  function toggleDarkMode() {
+      var element = document.body;
+      element.classList.toggle("dark-mode");
+    } 
   </script>
