--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
     <p class="button" id="button-github">My Github</p>
     <p class="button" id="button-twitter">My twitter</p>
   </div>
+  <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div>
+      <p class="button" id="button-background">Toggle Dark Mode</p>
+    </div>
+
   </body>
 </html>
 
@@ -44,4 +55,9 @@
   document.getElementById('button-vieux').onclick = () => window.location = "https://github.com/MatthewPierson/Vieux";
   document.getElementById('button-github').onclick = () => window.location = "https://github.com/MatthewPierson";  
   document.getElementById('button-twitter').onclick = () => window.location = "https://twitter.com/mosk_i";
+  document.getElementById('button-background').onclick= () => toggleDarkMode();
+  function toggleDarkMode() {
+      var element = document.body;
+      element.classList.toggle("dark-mode");
+    } 
 </script>
