--- a/ios_downgrades.html
+++ b/ios_downgrades.html
@@ -37,7 +37,31 @@
     <div>
       <p class="button" id="button-home">Back Home</p>
     </div>
-	
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div>
+      <p class="button" id="button-background">Toggle Dark Mode</p>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div>
+      <p class="button" id="button-background">Toggle Dark Mode</p>
+    </div>
   </body>
 </html>
 
@@ -47,4 +71,9 @@
   document.getElementById('button-iphone').onclick = () => window.location = "https://MatthewPierson.github.io/iphones.html";
   document.getElementById('button-ipad').onclick = () => window.location = "https://MatthewPierson.github.io/ipaddetailed.html";
   document.getElementById('button-ipod').onclick = () => window.location = "https://MatthewPierson.github.io/ipods.html";
+  document.getElementById('button-background').onclick= () => toggleDarkMode();
+  function toggleDarkMode() {
+      var element = document.body;
+      element.classList.toggle("dark-mode");
+    } 
 </script>
