--- a/ipaddetailed.html
+++ b/ipaddetailed.html
@@ -35,7 +35,16 @@
     <div>
       <p class="button" id="button-home">Back</p>
     </div>
-	
+	<br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div>
+      <p class="button" id="button-background">Toggle Dark Mode</p>
+    </div>
   </body>
 </html>
 
@@ -45,4 +54,9 @@
   document.getElementById('button-mini').onclick = () => window.location = "https://MatthewPierson.github.io/ipadmini.html";
   document.getElementById('button-air').onclick = () => window.location = "https://MatthewPierson.github.io/ipadair.html";
   document.getElementById('button-home').onclick = () => window.location = "https://matthewpierson.github.io/ios_downgrades.html";
+  document.getElementById('button-background').onclick= () => toggleDarkMode();
+  function toggleDarkMode() {
+      var element = document.body;
+      element.classList.toggle("dark-mode");
+    } 
 </script>
