--- a/iphones.html
+++ b/iphones.html
@@ -53,7 +53,11 @@
     <div>
       <p class="button" id="button-home">Back</p>
     </div>
-	
+    <br>
+    <br>
+    <div>
+      <p class="button" id="button-background">Toggle Dark Mode</p>
+    </div>
   </body>
 </html>
 
@@ -73,4 +77,9 @@
   document.getElementById('button-sep').onclick = () => window.location = "https://MatthewPierson.github.io/guides/sep.html";
   document.getElementById('button-futurerestore').onclick = () => window.location = "https://MatthewPierson.github.io/guides/futurerestore.html";
   document.getElementById('button-vieux').onclick = () => window.location = "https://MatthewPierson.github.io/guides/vieux.html";
+  document.getElementById('button-background').onclick= () => toggleDarkMode();
+  function toggleDarkMode() {
+      var element = document.body;
+      element.classList.toggle("dark-mode");
+    } 
 </script>
