Revert "Fixed choice being changed sometimes"
This reverts commit 4630e21297cab92af7ba5fbaeafa197df0b945c0.

--- a/devices/iphone/6.html
+++ b/devices/iphone/6.html
@@ -106,6 +106,7 @@ function checkState() {
         localStorage.setItem("darkmodeState",g);
       }
       if (check.includes("0")) { 
+        element.classList.toggle("dark-mode");
         g = 1;
         localStorage.setItem("darkmodeState",g);
       }
