--- a/devices/iphone/5s.html
+++ b/devices/iphone/5s.html
@@ -115,6 +115,7 @@
         localStorage.setItem("darkmodeState",g);
       }
       if (check.includes("0")) { 
+        element.classList.toggle("dark-mode");
         g = 1;
         localStorage.setItem("darkmodeState",g);
       }
