--- a/ipadmini.html
+++ b/ipadmini.html
@@ -80,6 +80,7 @@
         localStorage.setItem("darkmodeState",g);
       }
       if (check.includes("0")) { 
+        element.classList.toggle("dark-mode");
         g = 1;
         localStorage.setItem("darkmodeState",g);
       }
